# tapy

./: .coveragerc  .readthedocs.yaml  .travis.yml  AUTHORS  CONTRIBUTING.md  EURUSD60.csv  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
docs/: conf.py  index.rst
tapy/: __init__.py  indicators.py  utils.py
test/: conftest.py  old_test_tapy.py  test_tapy.py
