[tool.poetry]
name = "tapy"
version = "1.10.0"
description = "Technical Indicators for the Pandas' Dataframes"
authors = ["Dmitrii K <dmitriik@protonmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
numpy = "<2"
pandas = "^2.2.2"


[tool.poetry.group.dev-tests.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
tox = "^4.16.0"


[tool.poetry.group.dev-docs.dependencies]
readme-renderer = "^43.0"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.group.dev-linters.dependencies]
isort = "^5.13"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
