[project]
name = "tapy"
version = "1.11.0"
description = "Technical Indicators for the Pandas' Dataframes"
authors = [{ name = "Dmitrii K", email = "dmitriik@proton.me" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = ["pandas>=2.2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

[dependency-groups]
dev = ["pytest>=8.2.2", "pytest-cov>=5.0.0", "tox>=4.16.0"]
dev-docs = ["readme-renderer>=43.0", "sphinx>=7.3.7", "sphinx-rtd-theme>=2.0.0"]
dev-linters = ["ruff>=0.4.9"]

[project.scripts]
smart-weather = "smart_weather.cli:main"

[project.urls]
Homepage = "https://github.com/dmitriiweb/tapy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
